# quetzalcoatlus

./: .gitignore  CMakeLists.txt  Makefile  README.md  deployment_filter.txt  quetzalcoatlus.qrc
resources/: quetzalcoatlus.desktop
src/: logfileerrorsextractor.cpp  logfileerrorsextractor.h  main.cpp  quetzalcoatlus_config.h  window.cpp  window.h
